--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,6 +81,12 @@ header {
   color: var(--tertiary-color);
 }
 
+.alert-list p {
+  padding: 10px;
+  text-align: center;
+  border-radius: 8px;
+}
+
 button {
   padding: 0.5em 2em;
   background-color: var(--secondary-color);
