--- a/src/css/style.css
+++ b/src/css/style.css
@@ -207,6 +207,10 @@ ul.product__color li div {
   grid-row: 1/3;
   grid-column: 1;
 }
+
+.cart-card__image img {
+  padding: 0 20px 0 10px;
+}
 .cart-card p {
   margin-top: 0;
 }
