--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -4,6 +4,7 @@
 </div>
 <div class="cart">
   <a id="iconLink" href="/cart/index.html">
+    <div id="itemCount"></div>
     <svg
       id="cart-icon"
       xmlns="http://www.w3.org/2000/svg"
