--- a/src/css/style.css
+++ b/src/css/style.css
@@ -259,7 +259,7 @@ ul.product__color li div {
   display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
+  display: none;
 }
 
 footer {
