--- a/src/css/style.css
+++ b/src/css/style.css
@@ -186,7 +186,7 @@ ul.product__color li div {
   padding: 0 0.5em;
 }
 
-.selectedColorArea {
+#selectedColorArea {
   text-align: center;
   margin-bottom: 1em;
 }
