--- a/src/css/style.css
+++ b/src/css/style.css
@@ -303,7 +303,7 @@ img#productimage {
 }
 
 .product-banner-text {
-  /* display: none; */
+  display: none;
   position: absolute;
   width: 100%;
   top: 80%;
